--- a/codegen.yml
+++ b/codegen.yml
@@ -2,9 +2,8 @@ overwrite: true
 schema: "http://localhost:3000/api/graphql"
 documents: "queries/**/*.graphql"
 generates:
-  types/types.ts:
+  generated/types.ts:
     plugins:
       - "typescript"
       - "typescript-operations"
       - "typescript-react-apollo"
-      - "typescript-apollo-client-helpers"
