--- a/package.json
+++ b/package.json
@@ -1,143 +1,138 @@
 {
-	"name": "sick-fits-frontend",
-	"version": "2.0.0",
-	"description": "Sick Fits! An example React, GraphQL, Next and Apollo",
-	"main": "index.js",
-	"scripts": {
-		"dev": "next -p 7777",
-		"build": "next build",
-		"start": "next start -p 7777",
-		"test": "NODE_ENV=test jest --watch",
-		"generate": "graphql-codegen --config codegen.yml"
-	},
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"@apollo/client": "^3.3.8",
-		"@apollo/link-error": "^2.0.0-beta.3",
-		"@apollo/react-ssr": "^4.0.0",
-		"@emotion/react": "^11.1.5",
-		"@stripe/react-stripe-js": "^1.1.2",
-		"@stripe/stripe-js": "^1.11.0",
-		"@xstate/react": "^1.3.1",
-		"apollo-upload-client": "^14.1.3",
-		"babel-core": "^7.0.0-bridge.0",
-		"babel-plugin-styled-components": "^1.12.0",
-		"date-fns": "^2.16.1",
-		"downshift": "^6.0.6",
-		"graphql": "^15.5.0",
-		"graphql-tag": "^2.11.0",
-		"graphql-upload": "^11.0.0",
-		"gsap": "^3.6.1",
-		"lodash.debounce": "^4.0.8",
-		"mousetrap": "^1.6.5",
-		"next": "^10.0.3",
-		"next-with-apollo": "^5.1.1",
-		"nprogress": "^0.2.0",
-		"prop-types": "^15.7.2",
-		"react": "^17.0.1",
-		"react-dom": "^17.0.1",
-		"react-transition-group": "^4.4.1",
-		"styled-components": "^5.2.1",
-		"waait": "^1.0.5",
-		"xstate": "^4.17.1"
-	},
-	"devDependencies": {
-		"@apollo/react-testing": "^4.0.0",
-		"@babel/core": "^7.12.9",
-		"@babel/preset-env": "^7.12.7",
-		"@graphql-codegen/cli": "1.21.3",
-		"@testing-library/jest-dom": "^5.11.6",
-		"@testing-library/react": "^11.2.2",
-		"@testing-library/user-event": "^12.3.0",
-		"babel-eslint": "^10.1.0",
-		"babel-jest": "^26.6.3",
-		"casual": "^1.6.2",
-		"eslint": "^7.14.0",
-		"eslint-config-airbnb": "^18.2.1",
-		"eslint-config-prettier": "^6.15.0",
-		"eslint-config-wesbos": "^1.0.1",
-		"eslint-plugin-html": "^6.1.1",
-		"eslint-plugin-import": "^2.22.1",
-		"eslint-plugin-jsx-a11y": "^6.4.1",
-		"eslint-plugin-prettier": "^3.3.1",
-		"eslint-plugin-react": "^7.21.5",
-		"eslint-plugin-react-hooks": "^4.2.0",
-		"graphql-code-generator": "^0.18.2",
-		"jest": "^26.6.3",
-		"prettier": "2.2.1",
-		"react-test-renderer": "^17.0.1",
-		"@graphql-codegen/typescript": "1.21.1",
-		"@graphql-codegen/typescript-react-apollo": "2.2.3",
-		"@graphql-codegen/typescript-operations": "1.17.15",
-		"@graphql-codegen/typescript-apollo-client-helpers": "^1.1.4"
-	},
-	"eslintConfig": {
-		"extends": [
-			"wesbos"
-		],
-		"scripts": {
-			"lint": "eslint .",
-			"lint:fix": "eslint . --fix"
-		}
-	},
-	"jest": {
-		"setupFilesAfterEnv": [
-			"./jest.setup.js"
-		]
-	},
-	"//": "This is our babel config, I prefer this over a .babelrc file",
-	"babel": {
-		"env": {
-			"development": {
-				"presets": [
-					"next/babel"
-				],
-				"plugins": [
-					[
-						"styled-components",
-						{
-							"ssr": true,
-							"displayName": true
-						}
-					]
-				]
-			},
-			"production": {
-				"presets": [
-					"next/babel"
-				],
-				"plugins": [
-					[
-						"styled-components",
-						{
-							"ssr": true,
-							"displayName": true
-						}
-					]
-				]
-			},
-			"test": {
-				"presets": [
-					[
-						"next/babel",
-						{
-							"preset-env": {
-								"modules": "commonjs"
-							}
-						}
-					]
-				],
-				"plugins": [
-					[
-						"styled-components",
-						{
-							"ssr": true,
-							"displayName": true
-						}
-					]
-				]
-			}
-		}
-	}
+  "name": "sick-fits-frontend",
+  "version": "2.0.0",
+  "description": "Sick Fits! An example React, GraphQL, Next and Apollo",
+  "main": "index.js",
+  "scripts": {
+    "dev": "next -p 7777",
+    "build": "next build",
+    "start": "next start -p 7777",
+    "test": "NODE_ENV=test jest --watch",
+    "generate": "graphql-codegen --config codegen.yml"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@apollo/client": "^3.4.10",
+    "@apollo/link-error": "^2.0.0-beta.3",
+    "@apollo/react-ssr": "^4.0.0",
+    "@stripe/react-stripe-js": "^1.4.1",
+    "@stripe/stripe-js": "^1.17.1",
+    "apollo-upload-client": "^16.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-plugin-styled-components": "^1.13.2",
+    "date-fns": "^2.23.0",
+    "downshift": "^6.1.7",
+    "graphql": "^15.5.3",
+    "graphql-tag": "^2.12.5",
+    "graphql-upload": "^12.0.0",
+    "lodash.debounce": "^4.0.8",
+    "mousetrap": "^1.6.5",
+    "next": "^11.1.2",
+    "next-with-apollo": "^5.2.1",
+    "nprogress": "^0.2.0",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-transition-group": "^4.4.2",
+    "styled-components": "^5.3.1",
+    "waait": "^1.0.5"
+  },
+  "devDependencies": {
+    "@apollo/react-testing": "^4.0.0",
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.4",
+    "@graphql-codegen/cli": "2.2.0",
+    "@graphql-codegen/typescript": "2.2.1",
+    "@graphql-codegen/typescript-operations": "2.1.3",
+    "@graphql-codegen/typescript-react-apollo": "3.1.3",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^27.1.1",
+    "casual": "^1.6.2",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-wesbos": "^1.0.1",
+    "eslint-plugin-html": "^6.1.2",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.25.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "graphql-code-generator": "^0.18.2",
+    "jest": "^27.1.1",
+    "prettier": "2.3.2",
+    "react-test-renderer": "^17.0.2"
+  },
+  "eslintConfig": {
+    "extends": [
+      "wesbos"
+    ],
+    "scripts": {
+      "lint": "eslint .",
+      "lint:fix": "eslint . --fix"
+    }
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "./jest.setup.js"
+    ]
+  },
+  "//": "This is our babel config, I prefer this over a .babelrc file",
+  "babel": {
+    "env": {
+      "development": {
+        "presets": [
+          "next/babel"
+        ],
+        "plugins": [
+          [
+            "styled-components",
+            {
+              "ssr": true,
+              "displayName": true
+            }
+          ]
+        ]
+      },
+      "production": {
+        "presets": [
+          "next/babel"
+        ],
+        "plugins": [
+          [
+            "styled-components",
+            {
+              "ssr": true,
+              "displayName": true
+            }
+          ]
+        ]
+      },
+      "test": {
+        "presets": [
+          [
+            "next/babel",
+            {
+              "preset-env": {
+                "modules": "commonjs"
+              }
+            }
+          ]
+        ],
+        "plugins": [
+          [
+            "styled-components",
+            {
+              "ssr": true,
+              "displayName": true
+            }
+          ]
+        ]
+      }
+    }
+  }
 }
